chore: update code

--- a/web/templates/layouts/default.jade
+++ b/web/templates/layouts/default.jade
@@ -4,11 +4,11 @@ html(lang=en)
     meta(charset='UTF-8')
     title= title + '- PM2 Monitor'
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=2.0')
-    link(rel='stylesheet', href='/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/css/jquery.sticky.min.css')
-    link(rel='stylesheet', href='/css/animation.min.css')
-    link(rel='stylesheet', href='/css/jquery.avgrund.min.css')
-    link(rel='shortcut icon' href='/img/favicon.ico')
+    link(rel='stylesheet', href='css/bootstrap.min.css')
+    link(rel='stylesheet', href='css/jquery.sticky.min.css')
+    link(rel='stylesheet', href='css/animation.min.css')
+    link(rel='stylesheet', href='css/jquery.avgrund.min.css')
+    link(rel='shortcut icon' href='img/favicon.ico')
     block head
 
   - var bodyClassName = '';
