chore: update code

--- a/web/templates/views/index.jade
+++ b/web/templates/views/index.jade
@@ -1,8 +1,8 @@
 extends ../layouts/default
 
 block head
-  link(rel='stylesheet', href='/css/jquery.fullPage.css')
-  link(rel='stylesheet', href='/css/index.css')
+  link(rel='stylesheet', href='css/jquery.fullPage.css')
+  link(rel='stylesheet', href='css/index.css')
 
 block content
   #fullpage
