chore: update code

--- a/web/public/css/auth.css
+++ b/web/public/css/auth.css
@@ -9,11 +9,11 @@ body {
   letter-spacing: 0.5px;
   height: 100%;
   -webkit-text-size-adjust: none;
-  background: transparent url(/img/carbon.png) 0 0 repeat;
+  background: transparent url(img/carbon.png) 0 0 repeat;
 }
 
 .load {
-  background: url(/img/ajax-loading.gif) no-repeat center center;
+  background: url(img/ajax-loading.gif) no-repeat center center;
   width: 20px;
   height: 20px;
   display: block;
